Modificado estilos e index
He quitado de la barra de navegacion los botones y añadido
imagenes con efecto de aumento de tamaño trasform y transint
onhover.

--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
 		<h1 class="elemtFlexCentrado elemtFlexTres colorP2 sombraTexto centradoTexto">OFERTAS Y NEGOCIOS EN TU CIUDAD</h1>
 	</header>
 	<nav class="marcoFlex elemtFlexCentro elemtFlexEspaciados grad sombraCaja redondeoBorders">
-		<button class "elemtFlexCentrado elemtFlexUno boton" type="button" name="buttonAddUser">
-		ALTA USUARIO
-	<img src="images/UserAdd.png" alt="Alta Usuario" width="30">
-	</button>
-		<button class "elemtFlexCentrado elemtFlexUno boton" type="button" name="buttonAddNegocio">
-		ALTA NEGOCIO
-		<img src="images/Negocio.png" alt="Alta Negocio" width="30">
-	</button>
-		<button class "elemtFlexCentrado elemtFlexUno boton" type="button" name="buttonLogin">
-		LOGÉATE
-		<img src="images/login.png" alt="login" width="30">
-
-	</button>
+		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddUser">
+			ALTA USUARIO
+			<img src="images/UserAdd.png" alt="Alta Usuario" width="30">
+		</figure>
+		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddNegocio">
+			ALTA NEGOCIO
+			<img src="images/Negocio.png" alt="Alta Negocio" width="30">
+		</figure>
+		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonLogin">
+			LOGÉATE
+			<img src="images/login.png" alt="login" width="30">
+		</figure>
 	</nav>
 </body>
 
