Añadida otro elemento del body
He añadido una seccion en el documento asi como un esbozo de
articulo.
También un menú desplegable al final

--- a/index.html
+++ b/index.html
@@ -27,11 +27,46 @@
 			ALTA NEGOCIO
 			<img src="images/Negocio.png" alt="Alta Negocio" width="30">
 		</figure>
-		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonLogin">
+		<figure class "elemtFlexCentrado elemtFlexUno
+
+		" name="buttonLogin">
 			LOGÉATE
 			<img src="images/login.png" alt="login" width="30">
 		</figure>
 	</nav>
+	<section class="bordes redondeoBorders grad sombraCaja">
+<article >
+	<img class="flotaIzq margen" src="images/Sorteo.png" alt="sorteo" name="sorteo" width="100" >
+	<hgroup class="margen">
+		<h1>PRESENTACIÓN DEL NEGOCIO</h1>
+		<h2>SUBTITULO DE PRESENTACIÓN</h2>
+	</hgroup>
+	<p class="padeo">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>
+	 sed do eiusmod tempor incididunt ut labore et dolore <br>
+	 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br>
+	 ullamco laboris nisi ut aliquip ex ea commodo consequat.  <br>
+	 Duis aute irure dolor in reprehenderit inbr <br>
+	 voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+	 Excepteur sint occaecat cupidatat non proident,<br>
+	 sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
+	<details class="padeo margen">
+		<summary>click para desplegar</summary>
+		<p>
+			menu desplegado primero
+		</p>
+		<p>
+			menu desplegado segundo
+		</p>
+	</details>
+
+
+</article>
+	</section>
+
+
 </body>
 
 </html>
