--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width initial-scale=1.0">
+	<meta name="viewport" content="width=device-width initial-scale=1.0 shrink-to-fit=no">
 	<title>Artesanía</title>
 	<link rel="stylesheet" href="css/estilosPropios.css" type="text/css" />
+	<link rel="stylesheet" href="bootstrap-4.0.0-beta.2-dist/css/bootstrap.min.css" />
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="bootstrap-4.0.0-beta.2-dist/js/bootstrap.min.js"></script>
 	<script src="js/scriptPropios.js"></script>
 </head>
 
@@ -35,22 +39,31 @@
 		</figure>
 	</nav>
 	<section class="bordes redondeoBorders grad sombraCaja">
-<article >
+<article>
 	<img class="flotaIzq margen" src="images/Sorteo.png" alt="sorteo" name="sorteo" width="100" >
 	<hgroup class="margen">
 		<h1>PRESENTACIÓN DEL NEGOCIO</h1>
 		<h2>SUBTITULO DE PRESENTACIÓN</h2>
 	</hgroup>
 	<p class="padeo">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>
-	 sed do eiusmod tempor incididunt ut labore et dolore <br>
-	 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br>
-	 ullamco laboris nisi ut aliquip ex ea commodo consequat.  <br>
-	 Duis aute irure dolor in reprehenderit inbr <br>
-	 voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
-	 Excepteur sint occaecat cupidatat non proident,<br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+	 sed do eiusmod tempor incididunt ut labore et dolore
+	 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+	 ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	 Duis aute irure dolor in reprehenderit inbr
+	 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+	 Excepteur sint occaecat cupidatat non proident,
 	 sunt in culpa qui officia deserunt mollit anim id est laborum.
+	 Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+	sed do eiusmod tempor incididunt ut labore et dolore
+	magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+	ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	Duis aute irure dolor in reprehenderit inbr
+	voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+	Excepteur sint occaecat cupidatat non proident,
+	sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
+
 
 	<details class="padeo margen">
 		<summary>click para desplegar</summary>
@@ -64,6 +77,13 @@
 
 
 </article>
+<aside>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+</aside>
 	</section>
 
 
