Ajustado el bloque izquierdo. Barra de navegacion pegajosa
He ajustado el bloque de contenido lateral a la izquierda y he
hecho pegajosa la barra de navegacion. Aun no he usado ninguna
caracteristica de bootstrap.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</figure>
 		<h1 class="elemtFlexCentrado elemtFlexTres colorP2 sombraTexto centradoTexto">OFERTAS Y NEGOCIOS EN TU CIUDAD</h1>
 	</header>
-	<nav class="marcoFlex elemtFlexCentro elemtFlexEspaciados grad sombraCaja redondeoBorders">
+	<nav class="sticky marcoFlex elemtFlexCentro elemtFlexEspaciados grad sombraCaja redondeoBorders">
 		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddUser">
 			ALTA USUARIO
 			<img src="images/UserAdd.png" alt="Alta Usuario" width="30">
@@ -38,55 +38,60 @@
 			<img src="images/login.png" alt="login" width="30">
 		</figure>
 	</nav>
-	<section class="bordes redondeoBorders grad sombraCaja">
-<article>
-	<img class="flotaIzq margen" src="images/Sorteo.png" alt="sorteo" name="sorteo" width="100" >
-	<hgroup class="margen">
-		<h1>PRESENTACIÓN DEL NEGOCIO</h1>
-		<h2>SUBTITULO DE PRESENTACIÓN</h2>
-	</hgroup>
-	<p class="padeo">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-	 sed do eiusmod tempor incididunt ut labore et dolore
-	 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-	 ullamco laboris nisi ut aliquip ex ea commodo consequat.
-	 Duis aute irure dolor in reprehenderit inbr
-	 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-	 Excepteur sint occaecat cupidatat non proident,
-	 sunt in culpa qui officia deserunt mollit anim id est laborum.
-	 Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-	sed do eiusmod tempor incididunt ut labore et dolore
-	magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-	ullamco laboris nisi ut aliquip ex ea commodo consequat.
-	Duis aute irure dolor in reprehenderit inbr
-	voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-	Excepteur sint occaecat cupidatat non proident,
-	sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+	<div class="marcoFlex">
 
 
-	<details class="padeo margen">
-		<summary>click para desplegar</summary>
-		<p>
-			menu desplegado primero
-		</p>
-		<p>
-			menu desplegado segundo
-		</p>
-	</details>
+	<section  class="elemtFlexTres padeo bordes redondeoBorders grad sombraCaja">
+			<article >
+					<img class="flotaIzq margen" src="images/Sorteo.png" alt="sorteo" name="sorteo" width="100" >
+								<hgroup class="margen">
+											<h1>PRESENTACIÓN DEL NEGOCIO</h1>
+											<h2>SUBTITULO DE PRESENTACIÓN</h2>
+								</hgroup>
+						<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+											 sed do eiusmod tempor incididunt ut labore et dolore
+											 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+											 ullamco laboris nisi ut aliquip ex ea commodo consequat.
+											 Duis aute irure dolor in reprehenderit inbr
+											 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+											 Excepteur sint occaecat cupidatat non proident,
+											 sunt in culpa qui officia deserunt mollit anim id est laborum.
+											 Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+											sed do eiusmod tempor incididunt ut labore et dolore
+											magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+											ullamco laboris nisi ut aliquip ex ea commodo consequat.
+											Duis aute irure dolor in reprehenderit inbr
+											voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+											Excepteur sint occaecat cupidatat non proident,
+											sunt in culpa qui officia deserunt mollit anim id est laborum.
+	  				</p>
 
 
-</article>
-<aside>
-	<p>zona lateral</p>
-	<p>zona lateral</p>
-	<p>zona lateral</p>
-	<p>zona lateral</p>
-	<p>zona lateral</p>
-</aside>
+									<details class="padeo margen">
+										<summary>click para desplegar</summary>
+													<br>
+													<p>
+														menu desplegado primero
+													</p>
+													<p>
+														menu desplegado segundo
+													</p>
+									</details>
+
+
+			</article>
+
 	</section>
+	<aside class="elemtFlexUno padeo bordes redondeoBorders grad sombraCaja">
+		<p>zona lateral</p>
+		<p>zona lateral</p>
+		<p>zona lateral</p>
+		<p>zona lateral</p>
+		<p>zona lateral</p>
+	</aside>
 
-
+</div>
 </body>
 
 </html>
