Centrado del cuerpo. Adicionado del pie
He centrado el cuerpo del documento añadida otra seccion para darle
más longitud y añadido un pie pegajoso. Un nuevo elemento en la
barra de navegación, para buscar.
Para el proximo imagen de fondo y otras ideas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+	<section class="centradoBody">
 	<header class="marcoFlex grad sombraCaja redondeoBorders">
 		<figure class="elemtFlexCentrado elemtFlexUno">
 			<img src="images/AgrupaeH.png" alt="logo Agrupae" width="200" />
@@ -26,6 +27,10 @@
 		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddUser">
 			ALTA USUARIO
 			<img src="images/UserAdd.png" alt="Alta Usuario" width="30">
+		</figure>
+		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddUser">
+			BUSCAR
+			<img src="images/lupa.png" alt="busqueda" width="30">
 		</figure>
 		<figure class "elemtFlexCentrado elemtFlexUno" name="buttonAddNegocio">
 			ALTA NEGOCIO
@@ -92,6 +97,67 @@
 	</aside>
 
 </div>
+<div class="marcoFlex">
+
+
+<section  class="elemtFlexTres padeo bordes redondeoBorders grad sombraCaja">
+		<article >
+				<img class="flotaIzq margen" src="images/Sorteo.png" alt="sorteo" name="sorteo" width="100" >
+							<hgroup class="margen">
+										<h1>PRESENTACIÓN DEL NEGOCIO</h1>
+										<h2>SUBTITULO DE PRESENTACIÓN</h2>
+							</hgroup>
+					<p>
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+										 sed do eiusmod tempor incididunt ut labore et dolore
+										 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+										 ullamco laboris nisi ut aliquip ex ea commodo consequat.
+										 Duis aute irure dolor in reprehenderit inbr
+										 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+										 Excepteur sint occaecat cupidatat non proident,
+										 sunt in culpa qui officia deserunt mollit anim id est laborum.
+										 Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+										sed do eiusmod tempor incididunt ut labore et dolore
+										magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+										ullamco laboris nisi ut aliquip ex ea commodo consequat.
+										Duis aute irure dolor in reprehenderit inbr
+										voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+										Excepteur sint occaecat cupidatat non proident,
+										sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+
+
+								<details class="padeo margen">
+									<summary>click para desplegar</summary>
+												<br>
+												<p>
+													menu desplegado primero
+												</p>
+												<p>
+													menu desplegado segundo
+												</p>
+								</details>
+
+
+		</article>
+
+</section>
+<aside class="elemtFlexUno padeo bordes redondeoBorders grad sombraCaja">
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+	<p>zona lateral</p>
+</aside>
+
+</section>
+
+<footer class="stickyabajo centradoTexto bordes fuenteMasEm colorP1">
+	informacion de la empresa
+	copyright
+	informacion de contacto etc
+</footer>
 </body>
+</div>
 
 </html>
